@@ -1,3 +1,8 @@
+2014-10-13 Paulo Andrade <pcpa@gnu.org>
+
+	* include/lightning.h, lib/jit_size.c, size.c: Use a
+	symbolic value for the last IR code.
+
 2014-10-12 Paulo Andrade <pcpa@gnu.org>
 
 	* include/lightning.h, include/lightning/jit_private.h,
